# MyCloudBackup

./: .gitignore  CMakeLists.txt  README.md  启动部署与代码说明.md
build-gtest/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  cmake_test_discovery_496475f396.json  server_utils_test[1]_include.cmake  server_utils_test[1]_tests.cmake
build-gtest/Testing/Temporary/: CTestCostData.txt
client/electron_app/: index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
scripts/: build_windows.ps1  smoke_test.ps1
src/core/: backup_core.cpp
src/server/: backup_server.cpp  server_utils.cpp  server_utils.h
tests/: server_utils_test.cpp
tests/jmeter/: list_query_test.jmx
tests/performance/: README.txt  performance_test.ps1  run_performance_test.bat
tests/performance/performance_results_20260716_163129/: health_requests.csv  list_requests.csv  summary.csv  transfer_metrics.csv
tests/performance/performance_results_20260716_172803/: health_requests.csv  list_requests.csv  summary.csv  transfer_metrics.csv
tests/performance/performance_results_20260716_183650/: health_requests.csv  list_requests.csv  summary.csv  transfer_metrics.csv  upload_response.json
